<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".activity_credit">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/myimagepng"
                app:civ_border_color="#3f51b5"
                app:civ_border_width="4dp"
                app:civ_shadow="true"
                android:tooltipText="Zeeshan Noor"
               android:layout_marginLeft="50dp"
                app:civ_shadow_radius="10"
                app:civ_shadow_color="#3f51b5"/>

            <!--<ImageView-->
                <!--android:layout_width="300dp"-->
                <!--android:layout_height="300dp"-->
                <!--android:src="@drawable/myimagepng"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:id="@+id/myimage"/>-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:textSize="15dp"
                android:textStyle="italic"
                android:text="@string/Zeeshan_Noor"/>

            <!--<ImageView-->
                <!--android:layout_width="300dp"-->
                <!--android:layout_height="300dp"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:id="@+id/zulfiqarImage"/>-->

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/zulfiqarpng"
                app:civ_border_color="#3f51b5"
                app:civ_border_width="4dp"
                app:civ_shadow="true"
                android:tooltipText="Zulfiqar Bin Zafar"
                android:layout_marginLeft="50dp"
                app:civ_shadow_radius="10"
                app:civ_shadow_color="#3f51b5"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:layout_gravity="center_horizontal"
                android:textSize="15dp"
                android:textStyle="italic"
                android:text="@string/Zulfiqar"/>


            <!--<ImageView-->
                <!--android:layout_width="300dp"-->
                <!--android:layout_height="300dp"-->
                <!--android:src="@drawable/emadphotopng"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:id="@+id/emadImage"/>-->

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/emadphotopng"
                app:civ_border_color="#3f51b5"
                app:civ_border_width="4dp"
                app:civ_shadow="true"
                android:tooltipText="Emad Siddiqui"
                android:layout_marginLeft="50dp"
                app:civ_shadow_radius="10"
                app:civ_shadow_color="#3f51b5"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:layout_gravity="center_horizontal"
                android:textSize="15dp"
                android:textStyle="italic"
                android:text="@string/emad"/>

            <!--<ImageView-->
                <!--android:layout_width="300dp"-->
                <!--android:layout_height="300dp"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:id="@+id/ahzamImage"/>-->

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/ahzampng"
                app:civ_border_color="#3f51b5"
                app:civ_border_width="4dp"
                android:tooltipText="Ahzam Ghauri"
                app:civ_shadow="true"
                android:layout_marginLeft="50dp"
                app:civ_shadow_radius="10"
                app:civ_shadow_color="#3f51b5"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:layout_gravity="center_horizontal"
                android:textSize="15dp"
                android:textStyle="italic"
                android:text="@string/ahzam"/>

            <!--<ImageView-->
                <!--android:layout_width="300dp"-->
                <!--android:layout_height="300dp"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:id="@+id/nawazImage"/>-->

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/nawazpng"
                app:civ_border_color="#3f51b5"
                app:civ_border_width="4dp"
                app:civ_shadow="true"
                android:layout_marginLeft="50dp"
                app:civ_shadow_radius="10"
                app:civ_shadow_color="#3f51b5"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:layout_gravity="center_horizontal"
                android:textSize="15dp"
                android:tooltipText="Muhammad Nawaz"
                android:textStyle="italic"
                android:text="@string/nawaz"/>


        </TableLayout>
    </ScrollView>





</RelativeLayout>